<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|center_horizontal|center_vertical"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/ivNinja"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="20dp"
                android:scaleType="centerInside"
                app:srcCompat="@drawable/icon" />

            <Button
                android:id="@+id/bPlay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="80dp"
                android:backgroundTint="#00E5FF"
                android:text="@string/play"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/bScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="80dp"
                android:backgroundTint="#00E5FF"
                android:text="@string/score"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:cornerRadius="0dp" />

            <Button
                android:id="@+id/bExit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="80dp"
                android:backgroundTint="#00E5FF"
                android:text="@string/exit"
                android:textColor="@color/black"
                android:textStyle="bold"
                app:cornerRadius="0dp" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
